a more or less stable version